--- a/css/styles.css
+++ b/css/styles.css
@@ -692,6 +692,9 @@ address .contacts-link.rgba:focus {
     transform: translate(-50%, -50%);
     width: 528px;
     height: 581px;
+    padding-top: 40px;
+    padding-left: 40px;
+    padding-right: 40px;
 
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -727,6 +730,175 @@ address .contacts-link.rgba:focus {
 .icon-close {
     
 }
+
+/* Форма модального окна */
+
+.modal-form {
+    display: flex;
+    flex-direction: column;
+    width: 448px;
+    
+}
+
+.modal-title {
+        
+        
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    
+    margin-bottom: 12px;
+
+    color: var(--primary-txt-color);
+}
+
+.modal-field {
+    margin-bottom: 10px;
+   
+}
+
+.form-input-wrapper {
+    position: relative;
+    display: block;
+}
+
+.input-field-icon {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+
+    transform: translateY(-50%);
+
+    fill: currentColor;
+    
+}
+
+.modal-input-name {
+      
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16;
+    
+        letter-spacing: 0.01em;
+        
+        color: var(--secondary-txt-color);
+
+        margin-bottom: 4px;
+        
+        display: block;
+}   
+
+.modal-input {
+    width: 100%;
+    height: 40px;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+
+    padding-left: 42px;
+
+}
+
+.modal-input:focus + .input-field-icon {
+    fill: var(--accent-color);
+}
+
+.modal-input:focus,
+.modal-comment-area:focus {
+    border: 1px solid var(--accent-color);
+    outline-style: none;
+
+    
+}
+
+.modal-input:focus .input-fill-icon {
+    
+}
+
+.modal-comment {
+    margin-bottom: 20px;
+
+}
+
+.modal-comment-area {
+    width: 100%;
+    height: 120px;
+
+    padding: 12px 16px;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
+
+.modal-checkbox {
+    padding-bottom: 30px;
+
+    display: flex;
+    justify-content: center;
+   
+}
+
+.terms-checkbox {
+    /* appearance: none; */
+    
+}
+
+.terms-text {
+        
+       
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 1.71;
+    
+        color: var(--secondary-txt-color);
+}
+
+.terms-link {
+    color: var(--accent-color);
+    border-bottom: 1px solid var(--accent-color);
+    display: inline-block;
+    line-height: 85%;
+}
+
+.submit-button {
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
+    
+    
+    color: var(--white-color);
+    background-color: var(--accent-color);
+    
+    border: 1px solid #000000;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    
+    display: block;
+    
+    margin-left: auto;
+    margin-right: auto;
+    
+    padding: 10px 52px;
+    
+    border: 0px;
+    
+    transition: background-color var(--transition-dur-and-func);
+    
+}
+    
+.submit-button:hover,
+.submit-button:focus {
+    background-color: var(--mbutton-hover);
+    
+    cursor: pointer;
+    }
+    
+    
+
+
 
 
 
