--- a/css/styles.css
+++ b/css/styles.css
@@ -721,10 +721,13 @@ address .contacts-link.rgba:focus {
     top: 8px;
     right: 8px;
 
+    transition: fill var(--transition-dur-and-func);
+
 }
 
 .modal-close-button:hover {
     cursor: pointer;
+    fill: var(--accent-color);
 }
 
 .icon-close {
@@ -737,6 +740,7 @@ address .contacts-link.rgba:focus {
     display: flex;
     flex-direction: column;
     width: 448px;
+    
     
 }
 
@@ -755,6 +759,8 @@ address .contacts-link.rgba:focus {
 
 .modal-field {
     margin-bottom: 10px;
+    
+    
    
 }
 
@@ -771,6 +777,8 @@ address .contacts-link.rgba:focus {
     transform: translateY(-50%);
 
     fill: currentColor;
+
+    transition: fill var(--transition-dur-and-func);
     
 }
 
@@ -797,6 +805,8 @@ address .contacts-link.rgba:focus {
     border-radius: 4px;
 
     padding-left: 42px;
+
+    transition: border var(--transition-dur-and-func);
 
 }
 
@@ -829,24 +839,79 @@ address .contacts-link.rgba:focus {
 
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+
+    transition: border var(--transition-dur-and-func);
+}
+
+.terms-wrapper {
+    
+    margin-bottom: 30px;
+    
+    margin-left: auto;
+    margin-right: auto;
+    
 }
 
 .modal-checkbox {
-    padding-bottom: 30px;
-
     display: flex;
-    justify-content: center;
+    align-items: center;
    
 }
 
 .terms-checkbox {
-    /* appearance: none; */
+     appearance: none;
     
 }
 
+.custom-checkbox {
+    width: 16px;
+    height: 15px;
+
+    margin-right: 8px;
+
+    
+
+    
+}
+
+.custom-checkbox-icon {
+   
+}
+
+.custom-checkbox-checked {
+   width: 16px;
+   height: 15px;
+
+    
+
+    margin-right: 8px;
+    
+
+    background-color: var(--accent-color);
+
+    display: none;
+
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    
+   
+    
+}
+
+.custom-checkbox-icon-checked {
+   fill: var(--white-color);
+   
+}
+
+.terms-checkbox:checked ~ .custom-checkbox-checked {
+    display: block;
+}
+
+.terms-checkbox:checked ~ .custom-checkbox {
+    display: none;
+}
+
 .terms-text {
-        
-       
         font-weight: 400;
         font-size: 14px;
         line-height: 1.71;
@@ -897,6 +962,118 @@ address .contacts-link.rgba:focus {
     }
     
     
+
+
+
+
+/* Оформление формы подписки на рассылку в футере */
+.page-footer {
+    position: relative;
+}
+
+.subscribe-form {
+    position: absolute;
+
+    top: 72px;
+    right: 215px;
+
+}
+
+.subscribe-title {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+
+    color: var(--white-color);
+
+    margin-bottom: 20px;
+}
+
+.subscribe-label {
+    
+}
+
+.subscribe-text-input {
+    
+        width: 358px;
+        height: 50px;
+
+        background-color: transparent;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+        border-radius: 4px;
+
+        outline: none;
+
+        padding: 16px 15px;
+
+        color: var(--footer-rgba-color);
+
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.25;
+        
+        color: var(--footer-rgba-color);
+        
+       
+
+}
+
+.subscribe-text-input::placeholder {
+        
+}
+
+.footer-submit-button {
+        position: relative;    
+
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 1.87;
+        letter-spacing: 0.06em;
+
+        color: var(--white-color);
+
+        background: var(--accent-color);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+
+        padding: 10px 28px;
+        margin-left: 12px;
+        
+        text-align: left;
+
+        width: 200px;
+        height: 50px;
+
+        transition: background-color var(--transition-dur-and-func);
+}
+
+.footer-submit-button:focus,
+.footer-submit-button:hover {
+    
+    background-color: var(--mbutton-hover);
+    
+    cursor: pointer;
+    
+}
+
+.subscribe-svg {
+    position: absolute;
+    top: 13px;
+    right: 28px;
+    margin-left: 10px; 
+    
+    fill: currentColor;
+}
+
+.subscribe-icon {
+
+}
+
+
+
 
 
 
