Запрещает пользователю произвольно менять размер textarea

--- a/css/styles.css
+++ b/css/styles.css
@@ -841,6 +841,8 @@ address .contacts-link.rgba:focus {
     border-radius: 4px;
 
     transition: border var(--transition-dur-and-func);
+
+    resize: none;
 }
 
 .terms-wrapper {
