--- a/css/styles.css
+++ b/css/styles.css
@@ -598,6 +598,7 @@ address .contacts-link.rgba:focus {
 }
 
 .footer-flex {
+    
     display: flex;
     align-items: baseline;
 }
@@ -691,10 +692,9 @@ address .contacts-link.rgba:focus {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 528px;
-    height: 581px;
-    padding-top: 40px;
-    padding-left: 40px;
-    padding-right: 40px;
+    
+    padding: 40px;
+    
 
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -725,7 +725,8 @@ address .contacts-link.rgba:focus {
 
 }
 
-.modal-close-button:hover {
+.modal-close-button:hover,
+.modal-close-button:focus {
     cursor: pointer;
     fill: var(--accent-color);
 }
@@ -832,6 +833,8 @@ address .contacts-link.rgba:focus {
 }
 
 .modal-comment-area {
+    display: block;
+
     width: 100%;
     height: 120px;
 
@@ -978,10 +981,12 @@ address .contacts-link.rgba:focus {
 }
 
 .subscribe-form {
-    position: absolute;
+    /* position: absolute;
 
     top: 72px;
-    right: 215px;
+    right: 215px; */
+
+    margin-left: auto;
 
 }
 
@@ -1014,20 +1019,20 @@ address .contacts-link.rgba:focus {
 
         padding: 16px 15px;
 
-        color: var(--footer-rgba-color);
+        
 
         font-weight: 400;
         font-size: 16px;
         line-height: 1.25;
         
-        color: var(--footer-rgba-color);
+        color: var(--white-color);
         
        
 
 }
 
 .subscribe-text-input::placeholder {
-        
+        color: var(--footer-rgba-color);
 }
 
 .footer-submit-button {
